syntax = "proto3";

package stakebird.user.v1beta1;

option go_package = "github.com/public-awesome/stakebird/x/curating/types";

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

message Post {
  uint32 vendor_id = 1 [
    (gogoproto.customname) = "VendorID",
    (gogoproto.moretags) = "yaml:\"vendor_id\"",
    (gogoproto.jsontag) = "vendor_id"
  ];
  bytes post_id_hash = 2 [
    (gogoproto.customname) = "PostIDHash",
    (gogoproto.moretags) = "yaml:\"post_id_hash\"",
    (gogoproto.jsontag) = "post_id_hash"
  ];
  bytes creator = 3 [
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress",
    (gogoproto.moretags) = "yaml:\"creator\""
  ];
  bytes reward_account = 4 [
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress",
    (gogoproto.moretags) = "yaml:\"reward_account\""
  ];
  bytes body_hash = 5 [ (gogoproto.moretags) = "yaml:\"body_hash\"" ];
  google.protobuf.Timestamp curating_end_time = 7 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"curating_end_time\""
  ];
}

message Upvote {
  bytes curator = 1 [
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress",
    (gogoproto.moretags) = "yaml:\"curator\""
  ];
  bytes reward_account = 2 [
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress",
    (gogoproto.moretags) = "yaml:\"reward_account\""
  ];
  cosmos.base.v1beta1.Coin vote_amount = 3 [ (gogoproto.nullable) = false ];
  google.protobuf.Timestamp curated_time = 5 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"curated_time\""
  ];
}

// VPPair is struct that just has a vendor_id, post_id pair with no other data.
// It is intended to be used as a marshalable pointer. For example, a VPPair can
// be used to construct the key to getting an Upvote from state.
message VPPair {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_stringer) = true;

  uint32 vendor_id = 1 [
    (gogoproto.customname) = "VendorID",
    (gogoproto.moretags) = "yaml:\"vendor_id\"",
    (gogoproto.jsontag) = "vendor_id"
  ];
  bytes post_id_hash = 2 [
    (gogoproto.customname) = "PostIDHash",
    (gogoproto.moretags) = "yaml:\"post_id_hash\"",
    (gogoproto.jsontag) = "post_id_hash"
  ];
}

// VPPairs defines an array of VPPair objects.
message VPPairs { repeated VPPair pairs = 1 [ (gogoproto.nullable) = false ]; }

message Params {
  option (gogoproto.goproto_stringer) = false;
  google.protobuf.Duration curation_window = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.stdduration) = true,
    (gogoproto.moretags) = "yaml:\"curation_window\""
  ];

  cosmos.base.v1beta1.Coin vote_amount = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"vote_amount\"",
    (gogoproto.jsontag) = "vote_amount"
  ];
  uint32 max_num_votes = 3 [
    (gogoproto.moretags) = "yaml:\"max_num_votes\"",
    (gogoproto.jsontag) = "max_num_votes"
  ];
  uint32 max_vendors = 4 [
    (gogoproto.moretags) = "yaml:\"max_vendors\"",
    (gogoproto.jsontag) = "max_vendors"
  ];

  string reward_pool_allocation = 5 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"reward_pool_allocation\""
  ];
  string creator_allocation = 6 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "creator_allocation,omitempty",
    (gogoproto.moretags) = "yaml:\"creator_allocation\""
  ];

  string reward_pool_curation_max_alloc = 7 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "reward_pool_curation_max_alloc,omitempty",
    (gogoproto.moretags) = "yaml:\"reward_pool_curation_max_alloc\""
  ];
  cosmos.base.v1beta1.Coin initial_reward_pool = 8 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"initial_reward_pool\"",
    (gogoproto.jsontag) = "initial_reward_pool"
  ];
}
